syntax = "proto3";

import "UsersServiceMessages/User.proto";

option csharp_namespace = "UserService.Messages";

package UserService;

message AuthRequest{
  string Username = 1;
  bytes Password = 2;
  optional string status = 3;
}