syntax = "proto3";

import "UsersServiceMessages/User.proto";

option csharp_namespace = "UserService.Messages";

package UserService;

message RegisterRequest{
  string username = 1;
  bytes password = 2;
}